Tue May 24 09:31:42 2005  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/acedefaults.mpb:

          Use $(ILIBMODIFIER) instead of $(LIBMODIFIER).

        * tests/Pipe_Test.cpp:
        * tests/Process_Mutex_Test.cpp:

          Added missing ACE_TEXT () around option strings.  This was causing
          a very strange file to show up after the Process_Mutex_Test was
          run in the Borland unicode build and the Pipe_Test didn't run at
          all.

Tue May 24 00:17:09 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/cidlc.mpb:

                            Created a base project for cidlc & ccf project files.

Tue May 24 07:58:09 2005  Olli Savia  <ops@iki.fi>

        * ace/SSL/SSL_SOCK_Stream.h:
          Added include "ace/os_include/os_stdio.h" to fix compile
          problem on LynxOS. Thanks to Christine Ballard
          <christine.ballard at lmco dot com> for reporting the problem.

Mon May 23 23:11:14 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * contrib/utility/*:

          Added the utility library.

Mon May 23 16:38:13 2005  Steve Huston  <shuston@riverace.com>

        * examples/Reactor/Proactor/post_completions.cpp: Made use of the
          ACE_POSIX_SIG_Proactor-based test dependent on
          ACE_HAS_POSIX_REALTIME_SIGNALS, not ACE_POSIX_SIG_PROACTOR.
          ACE_POSIX_SIG_PROACTOR indicates a preference for that proactor
          implementation when one is not specified; it's not a capability
          indicator. The presence of the ACE_POSIX_SIG_Proactor implementation
          is based on the ACE_HAS_POSIX_REALTIME_SIGNALS setting, so that's
          what's used to decide whether to explicitly use
          ACE_POSIX_SIG_Proactor. This fixes a build error on Mac OS X Tiger
          with autoconfigure, as well as any other platform with AIO
          support that doesn't declare a Proactor implementation preference.