@@ -1,3 +1,9 @@
+Tue May 24 09:18:34 2005  Justin Michel  <michel_j@ociweb.com>
+
+        * ACEXML/tests/util/test.cpp:
+
+          Fixed for loop scoping problem for non-standard compilers.
+
 Tue May 24 09:31:42 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * bin/MakeProjectCreator/config/acedefaults.mpb:
